<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/kindergarten_bg" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:padding="10dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:textStyle="bold" />
            <!--full name-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/full_name_input_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/full_name"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey"
                    app:backgroundTint="@color/white" />
            </android.support.design.widget.TextInputLayout>
            <!--username-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/username_input_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey"
                    app:backgroundTint="@color/white" />
            </android.support.design.widget.TextInputLayout>
            <!--email address-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_input_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey"
                    app:backgroundTint="@color/white" />
            </android.support.design.widget.TextInputLayout>
            <!--phone number-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/phone_input_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:digits="1234567890"
                    android:hint="@string/phone"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey"
                    app:backgroundTint="@color/white" />
            </android.support.design.widget.TextInputLayout>

            <!--password-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_input_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey"
                    app:backgroundTint="@color/white" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/register"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/green_button_shape"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/have_an_account"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/log_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:padding="10dp"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
